# HarvesterDeploymentManager

./: .gitignore  ARCHITECTURE.md  Architecture.html  LICENSE  README.md  harvest-deploy.spec  pyproject.toml  settings.yaml
config/: harvesters.example.yaml
config/recipes/: chia-upgrade-default.yaml
docs/: PHASE_2_Planning.md  PHASE_3_Planning.md  PHASE_4_Planning.md  RELEASE_v0.1.0.md  RELEASE_v0.2.0.md  RELEASE_v0.3.4.md  RELEASE_v0.3.5.md  SOURCE_UPDATE_WORKFLOW.md
scripts/: build-gui.ps1  make_icon.py  write_version_info.py
src/harvester_deploy/: __init__.py  cli.py
src/harvester_deploy/domain/: __init__.py  models.py  network.py  telemetry.py
src/harvester_deploy/gui/: __init__.py  __main__.py  app.py  async_runner.py  log_hub.py  main_window.py  resources.py  services.py  styles.py
src/harvester_deploy/gui/widgets/: __init__.py  about_dialog.py  deploy_dialogs.py  doctor_dialog.py  fleet_summary_panel.py  history_dialog.py  inventory_dialog.py  log_panel.py  node_card.py  node_editor_dialog.py  settings_dialog.py
src/harvester_deploy/orchestrator/: __init__.py  runner.py
src/harvester_deploy/persistence/: __init__.py  config.py  db.py  fleet_store.py  history.py  keyring_support.py  paths.py  validation.py
src/harvester_deploy/recipes/: __init__.py  engine.py
src/harvester_deploy/reporting/: __init__.py  console.py  summary.py
src/harvester_deploy/ssh/: __init__.py  client.py  errors.py
tests/: test_engine.py  test_gui_smoke.py  test_history.py  test_network.py  test_paths.py  test_telemetry.py
