[project]
name = "harvester-deploy"
version = "0.1.0"
description = "Deploy Chia upgrades to harvester machines over SSH"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncssh>=2.14.0",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "rich>=13.0",
    "typer>=0.12.0",
]

[project.scripts]
harvester-deploy = "harvester_deploy.cli:app"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
